tests/vertical-slice/reject/fork_with_args.hew
// Reject fixture: fork_with_args — `fork`-spawned callee takes arguments.
//
// The structured-concurrency scope currently supports only no-argument functions
// returning unit.  Attempting to spawn a callee that takes arguments (here i64)
// fails closed in MIR lowering with a targeted E_NOT_YET_IMPLEMENTED diagnostic.
//
// This fixture pins the fail-closed boundary at:
//   hew-mir/src/lower.rs (direct_no_arg_unit_callee gate)
//
// When S5 widens fork to accept argument-bearing callees this fixture moves to
// accept/.
//
// Harness verb: hew compile
// Expected diagnostics:
//   - E_NOT_YET_IMPLEMENTED
//   - "spawned call"
//   - "no-argument functions returning unit"

fn unit_with_arg(x: i64) {}

actor _Worker {
    receive fn run() -> i64 {
        scope {
            unit_with_arg(42);
        };
        0
    }
}

fn main() -> i64 {
    let w = spawn _Worker;
    w.run()
}
